[package]
name = "maya_config_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.3"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread","full"] }
tonic = "0.8.3"
prost-types = "0.11.2"
tokio-stream = "0.1.11"
#retry = "2.0.0"
redis = { version = "0.22.1", features = ["tokio-comp","json","r2d2","connection-manager"] }
log = "0.4.17"
simplelog = "0.12.0"
r2d2_redis = "0.14.0"
futures = "0.3.25"
serde_json = "1.0.89"

[build-dependencies]
tonic-build = "0.8.4"
